--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,14 +33,10 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
+  paged_vertical_calendar: ^1.1.5
+  table_calendar: ^3.0.8
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
